--- a/html/components/component_variable.html
+++ b/html/components/component_variable.html
@@ -60,7 +60,40 @@
 	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
 	<style>
-		ul {}
+		ul li {
+			position: relative;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+		}
+
+		ul li:not(:last-child) {
+			margin-bottom: 10px;
+		}
+
+
+		ul li span {
+			color: var(--black-0) !important;
+		}
+
+		ul li i {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: var(--white-100);
+		}
+
+		ul li i:before {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			content: '\25A0';
+			color: inherit;
+			width: 24px;
+			font-size: 24px;
+			height: 24px;
+			border: 1px solid rgba(0, 0, 0, 0.1);
+		}
 	</style>
 </head>
 
@@ -70,7 +103,7 @@
 		<p>기본 컬러 팔레트 입니다.</p>
 
 		<div class="ui-guide-section">
-			<h2>Color variable</h2>
+			<h2>Color variable title <span>Value</span></h2>
 			<ul>
 				<li style="color:var(--black-0);"><span>black-0</span><i></i></li>
 				<li style="color:var(--black-100);"><span>black-100</span><i></i></li>
