--- a/html/components/component_button.html
+++ b/html/components/component_button.html
@@ -76,6 +76,8 @@
 				<button type="button" class="btn-large btn-tertiary">btn-tertiary</button>
 				<button type="button" class="btn-large btn-outlined">btn-outlined</button>
 				<button type="button" class="btn-large btn-ghost">btn-ghost</button>
+				<button type="button" class="btn-large btn-ghost-white">btn-ghost-white</button>
+
 			</div>
 			<hr>
 
