--- a/assets/css/ui-plugins.css
+++ b/assets/css/ui-plugins.css
@@ -99,367 +99,23 @@ select.ql-ui {height:initial;appearance:auto;font-size:initial;font-weight:initi
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {background-color:var(--red300);color:var(--white);}
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {background-color:#176CBB;color:var(--white);}
 
-/* loader */
-.loading-wrap {position:fixed;left:0;top:0;width:100%;height:100%;display:flex;align-items:center;justify-content:center;z-index:10000000;background-color:var(--gray100);}
 
-/* #loader {
-    width: 50px;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background: radial-gradient(farthest-side,#959595 94%,#0000) top/8px 8px no-repeat,conic-gradient(#0000 30%,#959595);
-    -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
-    mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
-    animation: spinning  1s infinite linear;
-}
-@keyframes spinning { 
-    100%{transform: rotate(1turn)}
-} */
-
-/* #loader {
-    width: 50px;
-    aspect-ratio: 1;
-    display: grid;
-    border-radius: 50%;
-    background:
-      linear-gradient(0deg ,rgb(0 0 0/50%) 30%,#0000 0 70%,rgb(0 0 0/100%) 0) 50%/8% 100%,
-      linear-gradient(90deg,rgb(0 0 0/25%) 30%,#0000 0 70%,rgb(0 0 0/75% ) 0) 50%/100% 8%;
-    background-repeat: no-repeat;
-    animation: l23 1s infinite steps(12);
-  }
-  #loader::before,
-  #loader::after {
-     content: "";
-     grid-area: 1/1;
-     border-radius: 50%;
-     background: inherit;
-     opacity: 0.915;
-     transform: rotate(30deg);
-  }
-  #loader::after {
-     opacity: 0.83;
-     transform: rotate(60deg);
-  }
-  @keyframes l23 {
-    100% {transform: rotate(1turn)}
-  } */
-
-#loader,
-#loader div,
-#loader div:after {
-    box-sizing: border-box;
-}
-#loader {
-    color: currentColor;
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-}
-#loader div {
-  transform-origin: 40px 40px;
-  animation: lds-spinner 1.2s linear infinite;
-}
-#loader div:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    top: 14.2px;
-    left: 36.8px;
-    width: 4.4px;
-    height: 11.6px;
-    border-radius: 20%;
-    background: currentColor;
-}
-#loader div:nth-child(1) {
-    transform: rotate(0deg);
-    animation-delay: -1.1s;
-}
-#loader div:nth-child(2) {
-    transform: rotate(30deg);
-    animation-delay: -1s;
-}
-#loader div:nth-child(3) {
-    transform: rotate(60deg);
-    animation-delay: -0.9s;
-}
-#loader div:nth-child(4) {
-    transform: rotate(90deg);
-    animation-delay: -0.8s;
-}
-#loader div:nth-child(5) {
-    transform: rotate(120deg);
-    animation-delay: -0.7s;
-    }
-#loader div:nth-child(6) {
-    transform: rotate(150deg);
-    animation-delay: -0.6s;
-}
-#loader div:nth-child(7) {
-    transform: rotate(180deg);
-    animation-delay: -0.5s;
-}
-#loader div:nth-child(8) {
-    transform: rotate(210deg);
-    animation-delay: -0.4s;
-}
-#loader div:nth-child(9) {
-    transform: rotate(240deg);
-    animation-delay: -0.3s;
-}
-#loader div:nth-child(10) {
-    transform: rotate(270deg);
-    animation-delay: -0.2s;
-}
-#loader div:nth-child(11) {
-    transform: rotate(300deg);
-    animation-delay: -0.1s;
-}
-#loader div:nth-child(12) {
-    transform: rotate(330deg);
-    animation-delay: 0s;
-}
-@keyframes lds-spinner {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
-}
-
-/* flag */
-.flag { background-image:url(../images/flags/flags.png); display:inline-block; width:16px; height:11px; }
-.flag.afghanistan{ background-position:0px -2311px; }
-.flag.albania{ background-position:0px -1034px; }
-.flag.algeria{ background-position:0px -528px; }
-.flag.americanSamoa{ background-position:0px -1562px; }
-.flag.andorra{ background-position:0px -594px; }
-.flag.angola{ background-position:0px -1947px; }
-.flag.anguilla{ background-position:0px -1980px; }
-.flag.antiguaAndBarbuda{ background-position:0px -869px; }
-.flag.argentina{ background-position:0px -2377px; }
-.flag.armenia{ background-position:0px -176px; }
-.flag.aruba{ background-position:0px -792px; }
-.flag.ascensionIsland{ background-position:0px -55px; }
-.flag.australia{ background-position:0px -1716px; }
-.flag.austria{ background-position:0px -1331px; }
-.flag.azerbaijan{ background-position:0px -1243px; }
-.flag.bahamas{ background-position:0px -363px; }
-.flag.bahrain{ background-position:0px -1496px; }
-.flag.bangladesh{ background-position:0px -1771px; }
-.flag.barbados{ background-position:0px -1573px; }
-.flag.belarus{ background-position:0px -1100px; }
-.flag.belgium{ background-position:0px 0px; }
-.flag.belize{ background-position:0px -484px; }
-.flag.benin{ background-position:0px -1298px; }
-.flag.bermuda{ background-position:0px -1914px; }
-.flag.bhutan{ background-position:0px -1848px; }
-.flag.bolivia{ background-position:0px -1650px; }
-.flag.bonaireSintEustatiusAndSaba{ background-position:0px -2719px; }
-.flag.bosniaAndHerzegovina{ background-position:0px -1584px; }
-.flag.botswana{ background-position:0px -2707px; }
-.flag.brazil{ background-position:0px -770px; }
-.flag.brunei{ background-position:0px -1683px; }
-.flag.bulgaria{ background-position:0px -2586px; }
-.flag.burkinaFaso{ background-position:0px -726px; }
-.flag.burundi{ background-position:0px -1892px; }
-.flag.cambodia{ background-position:0px -242px; }
-.flag.cameroon{ background-position:0px -2057px; }
-.flag.canada{ background-position:0px -1375px; }
-.flag.capeVerde{ background-position:0px -2652px; }
-.flag.caymanIslands{ background-position:0px -308px; }
-.flag.centralAfricanRepublic{ background-position:0px -1837px; }
-.flag.chad{ background-position:0px -814px; }
-.flag.chile{ background-position:0px -1342px; }
-.flag.china{ background-position:0px -825px; }
-.flag.colombia{ background-position:0px -330px; }
-.flag.comorosAndMayotte{ background-position:0px -1430px; }
-.flag.congo{ background-position:0px -1793px; }
-.flag.congoDemRep{ background-position:0px -1518px; }
-.flag.cookIslands{ background-position:0px -2267px; }
-.flag.costaRica{ background-position:0px -2090px; }
-.flag.coteDivoire{ background-position:0px -1661px; }
-.flag.croatia{ background-position:0px -902px; }
-.flag.cuba{ background-position:0px -748px; }
-.flag.curaçao{ background-position:0px -2729px; }
-.flag.cyprus{ background-position:0px -561px; }
-.flag.czechRepublic{ background-position:0px -2256px; }
-.flag.denmark{ background-position:0px -1386px; }
-.flag.diegoGarcia{ background-position:0px -55px; }
-.flag.djibouti{ background-position:0px -2101px; }
-.flag.dominica{ background-position:0px -2432px; }
-.flag.dominicanRepublic{ background-position:0px -1529px; }
-.flag.ecuador{ background-position:0px -1188px; }
-.flag.egypt{ background-position:0px -2201px; }
-.flag.elSalvador{ background-position:0px -1639px; }
-.flag.equatorialGuinea{ background-position:0px -1507px; }
-.flag.eritrea{ background-position:0px -715px; }
-.flag.estonia{ background-position:0px -2410px; }
-.flag.ethiopia{ background-position:0px -2443px; }
-.flag.falklandIslands{ background-position:0px -2762px; }
-.flag.faroeIslands{ background-position:0px -1111px; }
-.flag.fiji{ background-position:0px -1859px; }
-.flag.finland{ background-position:0px -1903px; }
-.flag.france{ background-position:0px -1012px; }
-.flag.frenchGuiana{ background-position:0px -2234px; }
-.flag.frenchPolynesia{ background-position:0px -1705px; }
-.flag.gabon{ background-position:0px -880px; }
-.flag.gambia{ background-position:0px -627px; }
-.flag.georgia{ background-position:0px -858px; }
-.flag.germany{ background-position:0px -2509px; }
-.flag.ghana{ background-position:0px -2112px; }
-.flag.gibraltar{ background-position:0px -275px; }
-.flag.greece{ background-position:0px -165px; }
-.flag.greenland{ background-position:0px -1760px; }
-.flag.grenada{ background-position:0px -2399px; }
-.flag.guadeloupe{ background-position:0px -407px; }
-.flag.guam{ background-position:0px -2366px; }
-.flag.guatemala{ background-position:0px -935px; }
-.flag.guinea{ background-position:0px -2575px; }
-.flag.guineaBissau{ background-position:0px -1925px; }
-.flag.guyana{ background-position:0px -803px; }
-.flag.haiti{ background-position:0px -319px; }
-.flag.honduras{ background-position:0px -2156px; }
-.flag.hongKong{ background-position:0px -2696px; }
-.flag.hungary{ background-position:0px -682px; }
-.flag.iceland{ background-position:0px -1991px; }
-.flag.india{ background-position:0px -1694px; }
-.flag.indonesia{ background-position:0px -1958px; }
-.flag.iran{ background-position:0px -2013px; }
-.flag.iraq{ background-position:0px -649px; }
-.flag.ireland{ background-position:0px -1969px; }
-.flag.israel{ background-position:0px -341px; }
-.flag.italy{ background-position:0px -143px; }
-.flag.jamaica{ background-position:0px -1727px; }
-.flag.japan{ background-position:0px -429px; }
-.flag.jordan{ background-position:0px -1463px; }
-.flag.kazakhstan{ background-position:0px -1210px; }
-.flag.kenya{ background-position:0px -2630px; }
-.flag.kiribati{ background-position:0px -374px; }
-.flag.koreaNorth{ background-position:0px -1804px; }
-.flag.koreaSouth{ background-position:0px -2245px; }
-.flag.kuwait{ background-position:0px -2487px; }
-.flag.kyrgyzstan{ background-position:0px -1617px; }
-.flag.laos{ background-position:0px -451px; }
-.flag.latvia{ background-position:0px -1936px; }
-.flag.lebanon{ background-position:0px -1254px; }
-.flag.lesotho{ background-position:0px -2190px; }
-.flag.liberia{ background-position:0px -2068px; }
-.flag.libya{ background-position:0px -132px; }
-.flag.liechtenstein{ background-position:0px -979px; }
-.flag.lithuania{ background-position:0px -1122px; }
-.flag.luxembourg{ background-position:0px -1474px; }
-.flag.macao{ background-position:0px -2597px; }
-.flag.macedonia{ background-position:0px -1353px; }
-.flag.madagascar{ background-position:0px -1287px; }
-.flag.malawi{ background-position:0px -2145px; }
-.flag.malaysia{ background-position:0px -1870px; }
-.flag.maldives{ background-position:0px -616px; }
-.flag.mali{ background-position:0px -2520px; }
-.flag.malta{ background-position:0px -1551px; }
-.flag.marshallIslands{ background-position:0px -1144px; }
-.flag.martinique{ background-position:0px -198px; }
-.flag.mauritania{ background-position:0px -253px; }
-.flag.mauritius{ background-position:0px -2179px; }
-.flag.mexico{ background-position:0px -2024px; }
-.flag.micronesia{ background-position:0px -1738px; }
-.flag.moldova{ background-position:0px -2685px; }
-.flag.monaco{ background-position:0px -913px; }
-.flag.mongolia{ background-position:0px -2553px; }
-.flag.montenegro{ background-position:0px -2167px; }
-.flag.montserrat{ background-position:0px -583px; }
-.flag.morocco{ background-position:0px -2333px; }
-.flag.mozambique{ background-position:0px -638px; }
-.flag.myanmar{ background-position:0px -11px; }
-.flag.namibia{ background-position:0px -1881px; }
-.flag.nauru{ background-position:0px -1749px; }
-.flag.nepal{ background-position:0px -110px; }
-.flag.netherlands{ background-position:0px -1441px; }
-.flag.newCaledonia{ background-position:0px -1276px; }
-.flag.newZealand{ background-position:0px -1540px; }
-.flag.nicaragua{ background-position:0px -154px; }
-.flag.niger{ background-position:0px -550px; }
-.flag.nigeria{ background-position:0px -2476px; }
-.flag.niue{ background-position:0px -2079px; }
-.flag.norfolkIsland{ background-position:0px -209px; }
-.flag.northernMarianaIslands{ background-position:0px -704px; }
-.flag.norway{ background-position:0px -836px; }
-.flag.oman{ background-position:0px -2454px; }
-.flag.pakistan{ background-position:0px -2035px; }
-.flag.palau{ background-position:0px -231px; }
-.flag.palestine{ background-position:0px -1199px; }
-.flag.panama{ background-position:0px -847px; }
-.flag.papuaNewGuinea{ background-position:0px -1485px; }
-.flag.paraguay{ background-position:0px -2344px; }
-.flag.peru{ background-position:0px -946px; }
-.flag.philippines{ background-position:0px -1815px; }
-.flag.poland{ background-position:0px -1177px; }
-.flag.portugal{ background-position:0px -517px; }
-.flag.puertoRico{ background-position:0px -473px; }
-.flag.qatar{ background-position:0px -462px; }
-.flag.reunion{ background-position:0px -264px; }
-.flag.romania{ background-position:0px -671px; }
-.flag.russia{ background-position:0px -660px; }
-.flag.rwanda{ background-position:0px -2674px; }
-.flag.saintBarthélemy{ background-position:0px -1012px; }
-.flag.saintHelena{ background-position:0px -495px; }
-.flag.saintKittsAndNevis{ background-position:0px -99px; }
-.flag.saintLucia{ background-position:0px -1397px; }
-.flag.saintMartin{ background-position:0px -55px; }
-.flag.saintPierreAndMiquelon{ background-position:0px -1078px; }
-.flag.saintVincentGrenadines{ background-position:0px -2619px; }
-.flag.samoa{ background-position:0px -2300px; }
-.flag.sanMarino{ background-position:0px -2123px; }
-.flag.saoTomeAndPrincipe{ background-position:0px -2388px; }
-.flag.saudiArabia{ background-position:0px -33px; }
-.flag.senegal{ background-position:0px -2134px; }
-.flag.serbia{ background-position:0px -2465px; }
-.flag.seychelles{ background-position:0px -1045px; }
-.flag.sierraLeone{ background-position:0px -737px; }
-.flag.singapore{ background-position:0px -22px; }
-.flag.sintMaarten{ background-position:0px -2773px; }
-.flag.slovakia{ background-position:0px -2212px; }
-.flag.slovenia{ background-position:0px -1221px; }
-.flag.solomonIslands{ background-position:0px -1067px; }
-.flag.somalia{ background-position:0px -1364px; }
-.flag.southAfrica{ background-position:0px -2355px; }
-.flag.southSudan{ background-position:0px -2741px; }
-.flag.spain{ background-position:0px -1155px; }
-.flag.sriLanka{ background-position:0px -2641px; }
-.flag.sudan{ background-position:0px -352px; }
-.flag.suriname{ background-position:0px -2663px; }
-.flag.swaziland{ background-position:0px -2278px; }
-.flag.sweden{ background-position:0px -385px; }
-.flag.switzerland{ background-position:0px -1320px; }
-.flag.syria{ background-position:0px -1826px; }
-.flag.taiwan{ background-position:0px -506px; }
-.flag.tajikistan{ background-position:0px -187px; }
-.flag.tanzania{ background-position:0px -2289px; }
-.flag.thailand{ background-position:0px -957px; }
-.flag.timorLeste{ background-position:0px -2784px; }
-.flag.togo{ background-position:0px -605px; }
-.flag.tokelau{ background-position:0px -2751px; }
-.flag.tonga{ background-position:0px -1089px; }
-.flag.trinidadAndTobago{ background-position:0px -440px; }
-.flag.tunisia{ background-position:0px -539px; }
-.flag.turkey{ background-position:0px -1606px; }
-.flag.turkmenistan{ background-position:0px -2542px; }
-.flag.turksAndCaicos{ background-position:0px -1309px; }
-.flag.tuvalu{ background-position:0px -286px; }
-.flag.uganda{ background-position:0px -1166px; }
-.flag.ukraine{ background-position:0px -2002px; }
-.flag.unitedArabEmirates{ background-position:0px -2223px; }
-.flag.unitedKingdom{ background-position:0px -55px; }
-.flag.unitedStates{ background-position:0px -44px; }
-.flag.uruguay{ background-position:0px -2608px; }
-.flag.uzbekistan{ background-position:0px -1001px; }
-.flag.vanuatu{ background-position:0px -1265px; }
-.flag.vaticanCity{ background-position:0px -2322px; }
-.flag.venezuela{ background-position:0px -1056px; }
-.flag.vietnam{ background-position:0px -968px; }
-.flag.virginIslandsBritish{ background-position:0px -1408px; }
-.flag.virginIslandsUs{ background-position:0px -1782px; }
-.flag.wallisAndFutuna{ background-position:0px -1012px; }
-.flag.yemen{ background-position:0px -1672px; }
-.flag.zambia{ background-position:0px -1595px; }
-.flag.zimbabwe{ background-position:0px -2046px; }
+/* toastr */
+#toast-container.toast-bottom-center>div, #toast-container.toast-top-center>div {width:auto;margin:0 16px;}
+#toast-container>div {border-radius:8px;padding:10px 20px;box-shadow:none;-webkit-box-shadow:none;opacity:1;background: var(--surface-surface800);}
+.toast-title,
+.toast-message {font-size:16px;color:var(--white-100);font-weight:400;}
+.toast-message {margin-top:10px;}
+.btn-toast-wrap {display:flex;justify-content:flex-end;}
+.toast-success .toast-title,
+.toast-info .toast-title,
+.toast-warning .toast-title,
+.toast-error .toast-title {position:relative;padding-left:24px;}
+.toast-success .toast-title:before,
+.toast-info .toast-title:before,
+.toast-warning .toast-title:before,
+.toast-error .toast-title:before {content:'';position:absolute;left:0;top:3px;width:20px;height:20px;}
+.toast-success .toast-title:before {background:url(../images/toastr/ico_success.svg) center center / contain no-repeat;}
+.toast-info .toast-title:before {background:url(../images/toastr/ico_info.svg) center center / contain no-repeat;}
+.toast-warning .toast-title:before {background:url(../images/toastr/ico_warning.svg) center center / contain no-repeat;}
+.toast-error .toast-title:before {background:url(../images/toastr/ico_error.svg) center center / contain no-repeat;}
